Add main controller that caches tags (in memory for now)

--- a/App/Resources/nl.lproj/Localizable.strings
+++ b/App/Resources/nl.lproj/Localizable.strings
@@ -14,10 +14,13 @@
 "NEW_REPORT_PIN_SUBTITLE" = "Versleep naar exacte locatie";
 
 /* Report problem button. Should be short */
-"REPORT_PROBLEM_BUTTON" = "Meld Probleem";
+"REPORT_PROBLEM_BUTTON" = "Ga verder";
 
 /* Placeholder for the description field when reporting a new problem */
 "REPORT_PROBLEM_INFO_PLACEHOLDER" = "Beschrijving";
+
+/* Confirmation button when reporting a problem */
+"REPORT_PROBLEM_SEND_BUTTON" = "Verzend melding";
 
 /* Placeholder for the type/tags field when reporting a new problem */
 "REPORT_PROBLEM_TAGS_PLACEHOLDER" = "Type";
